fixed location text alignment

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -110,6 +110,7 @@ hr{
                 font-size: 1.4rem;
                 font-weight: 500;
                 margin-bottom: 0.8rem;
+                text-align: center;
 
                 .location-icon{
                     width: 0.75rem;
